fixed horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 body {
     margin: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     font-family: 'Merriweather', serif;
     background-color: rgba(223, 221, 221, 0.623);
 }
@@ -58,7 +58,7 @@ li {
     background-image: url(https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
     background-color: #cccccc; 
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -100,6 +100,7 @@ li {
 
 .show-results {
     text-align: center;
+    width: 100%;
 }
 
 .js-display-list {
@@ -155,6 +156,7 @@ li {
     }
     .show-results-padding {
         padding: 10px 70px;
+        width: 100%;
     }
 }
 
